# micro-Controller

./: .gitignore  CMakeLists.txt  build_and_filter.py  cleaned_flash_args.txt  flashMonitor.ps1  linker_script.ld  monitorMenu.txt  myRemoteDevice.txt  out.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
bootloader_components/main/: CMakeLists.txt  bootloader_start.c  bootloader_start.h
bootloader_components/my_boot_hooks/: CMakeLists.txt  hooks.c
bootloader_components2/main/: bootloader_start.c
customBuild/: flashArgs  flashArgsUncommented
main/: CMakeLists.txt  ble.c  ble.h  build_and_filter.py  consoleCommands.c  consoleCommands.h  consoleCommandsCallbacks.c  consoleRegister.c  deleteNvs.c  examplecom.h  exapmleCom2.c  gatt_demo.c  idf_component.yml  linker_script.ld  main.c  myProg.c  myRemoteDevice.c  myRemoteDevice.h  myRemoteDevice.txt  mySection.h  nvsFunctions.c  nvsFunctions.h  ota.c  ota.h  requestTaskBundle.h  strip.h  time.c  time.h  timeAfterTime.c  timeAfterTime.h
mainSmal/: CMakeLists.txt  smallProject.c
maind/: CMakeLists.txt  ble.c  myRemoteDevice.c  myRemoteDevice.h  output of example.txt
myRemoteDeviceComponent/: CMakeLists.txt  sdkconfig  sdkconfig.old
myRemoteDeviceComponent/components/myRemoteDevice/: CMakeLists.txt  myRemoteDevice.c
myRemoteDeviceComponent/main/: CMakeLists.txt
my_boot_hooks2/: CMakeLists.txt  myRemoteDevice.c  myRemoteDevice.h
temp/: CMakeLists.txt
temp/main/: CMakeLists.txt
temp/my_boot_hooks/: hooks.c
